fix recipe covering edit buttons on phone screens

--- a/kyberkucharka-frontend/src/styles/cards.css
+++ b/kyberkucharka-frontend/src/styles/cards.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  align-items: center;
 }
 
 .card {
@@ -172,7 +173,8 @@
 
 .flex-column {
   flex-direction: column;
-  justify-content:start;
+  justify-content: start;
+  align-items: center;
 }
 
 @media only screen and (max-width: 1650px) {
